# dev-marimo

./: .env_template  Dockerfile  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  update-marimo.yml
