[project]
name = "dev-marimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "faiss-cpu",
  "httpx",
  "jq",
  "langchain",
  "langchain-community",
  "langchain-text-splitters",
  "jmespath",
  "matplotlib",
  "nest_asyncio",
  "ollama",
  "pandas",
  "plotly",
  "ppp-connectors",
  "psycopg2-binary",
  "pymongo",
  "pymysql",
  "pyvis",
  "requests",
  "SQLAlchemy",
  "tabulate",
  "trino",
  "marimo[recommended]>=0.23.0",
]

[tool.marimo.runtime]
dotenv = ["/home/app_user/.config/marimo/.env"]
